# passive_stereo

./: CMakeLists.txt  README.md  package.xml
cfg/: OAKDLR_left.yaml  OAKDLR_right.yaml  fsds_left.yaml  stereo_rgb_heavy_sim.yaml
launch/: disparity.launch.py  fsds_disparity.launch.py  triangulation.launch.py  triangulation_rgb.launch.py
src/: disparity-node.cpp  disparity.cpp  disparity.hpp
src/disparity/: disparity-node.cpp  disparity.cpp  disparity.hpp
src/triangulation/: triangulation-node.cpp  triangulation.cpp  triangulation.hpp
src/triangulation_rgb/: triangulation_rgb-node.cpp  triangulation_rgb.cpp  triangulation_rgb.hpp
